# symphony

./: AGENTS.md  README.md
.github/workflows/: go-check.yml  make-all.yml  pr-description-lint.yml  rust-check.yml
go/: .symphony.toml  go.mod  go.sum  justfile
go/cmd/gsymphony/: main.go
go/cmd/symphony/: main.go
go/internal/agent/: codex.go  runner.go  runner_test.go
go/internal/codex/: codex.go
go/internal/config/: config.go  config_store.go  config_test.go
go/internal/dashboard/: dashboard.go  html.go  terminal.go
go/internal/dynamictool/: dynamictool.go
go/internal/httpserver/: server.go
go/internal/logfile/: logfile.go
go/internal/orchestrator/: dispatch.go  orchestrator.go  orchestrator_test.go  outcome.go  retry.go  snapshot.go  state.go
go/internal/presenter/: presenter.go
go/internal/server/: http.go
go/internal/ssh/: ssh.go  (+1 more)
rust/: .symphony.toml  CLI.md  Cargo.toml  README.md  WORKFLOW.md  justfile
rust/provider/: claude_sidecar.mjs  claude_sidecar.ts
rust/src/: agent_runner.rs  codex.rs  config.rs  config_store.rs  dynamic_tool.rs  http.rs  lib.rs  log_file.rs  main.rs  orchestrator.rs  presenter.rs  ssh.rs  status_dashboard.rs  tracker.rs  workflow.rs  workflow_store.rs  workspace.rs
rust/src/provider/: claude.rs  codex.rs  gemini.rs  mod.rs  ollama.rs
typescript/: README.md  WORKFLOW.md  package.json  tsconfig.json
typescript/src/: agent_runner.ts  codex.ts  config.ts  dashboard.ts  http.ts  logger.ts  main.test.ts  main.ts  orchestrator.ts  prompt.ts  tracker.ts  types.ts  workflow.ts  workflow_store.ts  workspace.ts
(+11 files in other folders)
