[package]
name = "rsymphony"
version = "0.1.0"
edition = "2024"

[lib]
name = "rsymphony"
path = "src/lib.rs"

[[bin]]
name = "rsymphony"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
liquid = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
